# fhnw-prcpp

./: .gitignore
Uebung1/bitmap/: Bitmap.sln  CMakeLists.txt  README.md
Uebung1/bitmap/Bitmap/: Bitmap.cpp  Bitmap.h  Bitmap.vcxproj  Bitmap.vcxproj.filters
Uebung1/bitmap/Console/: Console.vcxproj  main.cpp
Uebung1/bitmap/UnitTest1/: UnitTest1.vcxproj  UnitTest1.vcxproj.filters  UnitTestBitmap.cpp
Uebung1/bitmap/UnitTest2/: UnitTest2.vcxproj  UnitTestBitmap.cpp
Uebung2/strings/: CMakeLists.txt  README.md  Strings.sln
Uebung2/strings/Console/: CMakeLists.txt  Console.vcxproj  main.cpp
Uebung2/strings/Strings/: MyString.cpp  MyString.h  StringView.h  Strings.vcxitems
Uebung2/strings/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  UnitTestString.cpp  UnitTestStringView.cpp
Uebung2/strings/UnitTest2/: CMakeLists.txt  UnitTest2.vcxproj  UnitTestString.cpp  UnitTestStringView.cpp
project1/: CMakeLists.txt  test.cc
project2/: CMakeLists.txt  Point.h  PointPtr.h  main.cpp
woche1/: main.cpp
woche2/: CMakeLists.txt  Person.cpp  Person.h  Point.h  main.cpp
